# terntup

./: .gitignore  LICENSE.md  Makefile  README.md  Shakefile.hs  package.json  terntup.cabal
src/: HelloTerntUp.hs  TerntUp.hs
testsuite/: TestRunner.hs
testsuite/tests/: TerntUpTest.hs
