name:           terntup
version:        0.0.1
category:       Math
synopsis:       a ternary library
description:    a library for converting to and from (balanced) ternary
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/terntup.git

library
  build-depends:
    base              >= 4.6.0.1 && < 5

  exposed-modules: TerntUp

  ghc-options: -O2 -Wall -fwarn-tabs
  hs-source-dirs: src

test-suite reference
  build-depends:
    base              >= 4.3.1.0 && < 5,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    HUnit,
    QuickCheck

  other-modules: TerntUp, TerntUpTest

  ghc-options:        -O2 -Wall -fwarn-tabs
  hs-source-dirs:     testsuite/tests, testsuite, src, .
  main-is:            testsuite/TestRunner.hs
  type:               exitcode-stdio-1.0
